<resources>
    <string name="app_name">Bias_list</string>
    <string name="nombre_del_artista">Nombre del artista</string>
    <string name="alias">Alias</string>
    <string name="escribe_algo_sobre_tu_idol">Escribe algo sobre tu idol</string>
    <string name="bio">Bio</string>
    <string name="calificacion">Calificacion</string>
    <string name="calificacion">Calificacion</string>
    <string name="espacio">..</string>
    <string name="bio">Bio</string>
    <string name="espacio1">...</string>
    <string name="alias">Alias</string>
    <string name="nombre">Nombre</string>
</resources>